# CryptoArchive

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
include/cryptsh/core/: ArchiveEntry.h  ArchiveError.h  ArchiveFormat.h  ArchiveReader.h  ArchiveService.h  ArchiveWriter.h  Compressor.h  CryptoProvider.h  FileSystemUtils.h
include/cryptsh/ui/: MainWindow.h
packaging/: CryptoArchive.iss
src/app/: MainWindow.cpp  app.rc  main.cpp  resources.qrc
src/core/: ArchiveFormat.cpp  ArchiveReader.cpp  ArchiveService.cpp  ArchiveWriter.cpp  Compressor.cpp  CryptoProvider.cpp  FileSystemUtils.cpp
tests/: smoke.cpp
